
2022-04-12  Ron Norman <rjn@inglenet.com>

	* Makefile.am : Add LIBCOB_VER for --version-info instead of hard coded
	* common.c: Removed checks for running in development mode for relocation

2022-04-11  Simon Sobisch <simonsobisch@gnu.org>

	* strings.c (inspect_find_data): extracted from cob_inspect_before /
	  cob_inspect_after
	* strings.c (cob_inspect_characters): use (is_marked) to count/replace
	  all characters at once when possible
	* strings.c (inspect_common, cob_inspect_characters,
	  cob_inspect_converting): early exit if nothing to inspect
	* strings.c (cob_init_strings, cob_inspect_init, cob_unstring_init):
	  don't pre-allocate inspect_mark, inspect_repdata, dlm_list but
	  allocate with minimal default size on first use

2022-04-08  Simon Sobisch <simonsobisch@gnu.org>

	* strings.c (do_mark, is_marked): extracted from inspect_common
	* strings.c (set_inspect_mark): new function to remember actual min/ma
	  positions of the marker bytes to remove the need to initialize huge
	  areas when we commonly have set only markers in the first n bytes
	  (or nothing), especially for INSPECT LEADING/TRAILING
	* strings.c (cob_inspect_init, cob_inspect_characters, is_marked): use of
	  the now definitive check "did we mark anything" instead of checking all
	  marker bytes by testing for "inspect_mark[inspect_mark_min] != 0"
	* strings.c (is_marked): check for possible/definitel overlap of
	  check and marker range before checking all marker bytes in range
	* strings.c: increase use of direct pointer comparisons instead of
	  accessing char arrays or its positions for INSPECT

2022-04-04  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (AM_CPPFLAGS): removed LOCALEDIR, now back in config.h
	* common.c: [_WIN32]: necessary inclusion + define for relocation code
	* common.c (cob_relocate_string, cob_find_path, cob_setup_env): handle
	  different compilers, win32 paths and binaries
	* common.c: handle memory issues with long paths
