@@ -1,4 +1,8 @@
 
+2022-05-16  Ron Norman <rjn@inglenet.com>
+
+	* common.c: Fix issue with a dump incorrectly reporting 'CODEGEN ERROR'
+
 2022-04-12  Ron Norman <rjn@inglenet.com>
 
 	* Makefile.am : Add LIBCOB_VER for --version-info instead of hard coded
